Fixed Alignment with Icon

--- a/Base/res/ladybird/inspector.css
+++ b/Base/res/ladybird/inspector.css
@@ -374,4 +374,7 @@ details> :not(:first-child) {
     background-image: url('resource://icons/16x16/inspectElementButton.png');
     border: none;
     cursor: pointer;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: var(--tab-controls);
 }
